--- a/packages/medusa-feed-yandex/src/admin/i18n/translations/ru.json
+++ b/packages/medusa-feed-yandex/src/admin/i18n/translations/ru.json
@@ -5,97 +5,90 @@
     "inactive": "Неактивен",
     "error": "Ошибка",
     "success": "Успешно",
-    "schedule": {
-      "minute_other": "{{count}} минут",
-      "hour_one": "{{count}} час",
-      "hour_other": "{{count}} часа",
-      "day_one": "{{count}} день"
-    }
+    "of": "из",
+    "results": "результатов",
+    "pages": "страниц",
+    "next": "Далее",
+    "prev": "Назад"
   },
-  "exports": {
-    "header": {
-      "title": "Фиды",
-      "subtitle": "Управление фидами"
-    },
+  "actions": {
+    "create": "Создать",
+    "edit": "Редактировать",
+    "delete": "Удалить",
+    "deleteFile": "Удалить файл",
+    "save": "Сохранить",
+    "cancel": "Отмена",
+    "launchNow": "Запустить сейчас"
+  },
+  "dateTime": {
+    "days": "д",
+    "hours": "ч",
+    "minutes": "мин"
+  },
+  "feeds": {
+    "domain": "Фиды",
+    "subtitle": "Создавайте фиды для выгрузки данных по расписанию",
     "create": {
-      "title": "Создать файл фида",
+      "title": "Создать фид",
       "description": "Создавайте и управляйте настройками фида."
-    }
-  },
-  "export": {
-    "header": {
-      "title": "Фид",
-      "subtitle": "Основная информация о фиде"
+    },
+    "fields": {
+      "title": "Название",
+      "fileName": "Имя файла",
+      "filePath": "Путь к файлу",
+      "lastExport": "Последний экспорт",
+      "status": "Статус",
+      "schedule": "Интеравал экспорта",
+      "id": "ID",
+      "feedUrl": "Ссылка на фид",
+      "created": "Создано",
+      "updated": "Обновлено"
     },
     "edit": {
       "title": "Редактировать фид",
       "description": "Обновить конфигурацию фида."
+    },
+    "toasts": {
+      "exportLaunched": "Фид успешно запущен",
+      "categoriesSaved": "Категории успешно сохранены",
+      "categoriesSaveFailed": "Не получучилось сохранить категории"
+    },
+    "prompts": {
+      "deleteFeed": {
+        "title": "Вы уверены?",
+        "description": "Вы собираетесь удалить фид. Это действие нельзя отменить."
+      },
+      "deleteFeedFile": {
+        "title": "Вы уверены?",
+        "description": "Вы собираетесь удалить файл фида. Это действие нельзя отменить."
+      }
+    },
+    "tooltips": {
+      "schedule": "Установите интервал для экспорта фида"
+    },
+    "activityContainer": {
+      "title": "Активность",
+      "subtitle": "Если флаг снят, фид не будет экспортироваться по расписанию."
     }
   },
-  "shop": {
-    "header": {
+  "settings": {
+    "shop": {
       "title": "Магазин",
-      "subtitle": "Описание магазина, для которого подготавливается файл"
+      "subtitle": "Данные магазина для файла фида",
+      "fields": {
+        "name": "Название магазина",
+        "company": "Компания",
+        "url": "URL магазина",
+        "platform": "Платформа"
+      },
+      "edit": {
+        "title": "Редактировать магазин",
+        "description": "Обновить данные магазина"
+      }
     },
-    "edit": {
-      "title": "Редактировать магазин",
-      "description": "Обновить данные магазина"
+    "categories": {
+      "title": "Категории товаров",
+      "subtitle": "Выберите категории товаров для экспорта"
     }
-  },
-  "categories": {
-    "header": {
-      "title": "Категории",
-      "subtitle": "Выберите категории для экспорта"
-    }
-  },
-  "actions": {
-    "edit": "Редактировать",
-    "delete": "Удалить",
-    "deleteFile": "Удалить файл"
-  },
-  "toasts": {
-    "exportLaunched": "Фид успешно запущен",
-    "categoriesSaved": "Категории успешно сохранены",
-    "categoriesSaveFailed": "Не получучилось сохранить категории"
-  },
-  "prompts": {
-    "deleteFeed": {
-      "title": "Удалить фид",
-      "description": "Вы уверены? Это действие безвозвратное."
-    },
-    "deleteFeedFile": {
-      "title": "Удалить файл фида",
-      "description": "Вы уверены? Это действие безвозвратное."
-    }
-  },
-  "tooltips": {
-    "schedule": "Установите расписание для экспорта фида"
-  },
-  "buttons": {
-    "save": "Сохранить",
-    "cancel": "Отмена",
-    "launchNow": "Запустить сейчас",
-    "create": "Создать",
-    "delete": "Удалить"
-  },
-  "activityContainer": {
-    "title": "Активность",
-    "subtitle": "Если флаг снят, фид не будет экспортироваться по расписанию."
-  },
-  "fields": {
-    "title": "Название",
-    "fileName": "Имя файла",
-    "filePath": "Путь к файлу",
-    "lastExport": "Последний экспорт",
-    "status": "Статус",
-    "schedule": "Расписание",
-    "ID": "ID",
-    "fileUrl": "URL файла",
-    "Created": "Создано",
-    "Updated": "Обновлено",
-    "name": "Название магазина",
-    "company": "Компания",
-    "url": "URL магазина",
-    "platform": "Платформа"
   }
 }
