fix(medusa-feed-yandex): fix ru translation

--- a/packages/medusa-feed-yandex/src/admin/i18n/translations/ru.json
+++ b/packages/medusa-feed-yandex/src/admin/i18n/translations/ru.json
@@ -38,7 +38,7 @@
       "filePath": "Путь к файлу",
       "lastExport": "Последний экспорт",
       "status": "Статус",
-      "schedule": "Интеравал экспорта",
+      "schedule": "Интервал экспорта",
       "id": "ID",
       "feedUrl": "Ссылка на фид",
       "created": "Создано",
