fix: various changes

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/moysklad/welcome/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/moysklad/welcome/ru.mdx
@@ -1,6 +1,11 @@
-# Добро пожаловать в плагины
+export const metadata = {
+	title: 'Добро пожаловать в плагины',
+	description: 'Добро пожаловать в исчерпывающую документацию по плагинам. Здесь вы найдете всю информацию, необходимую для понимания, установки, настройки и эффективного использования плагинов в ваших проектах.',
+};
 
-Добро пожаловать в исчерпывающую документацию по плагинам. Здесь вы найдете всю информацию, необходимую для понимания, установки, настройки и эффективного использования плагинов в ваших проектах.
+# {metadata.title}
+
+{metadata.description}
 
 ## Что такое плагины?
 
