fix: overview pages for sections

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/moysklad/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/moysklad/en.mdx
@@ -1,6 +1,11 @@
-# Welcome to Plugins
+export const metadata = {
+	title: "Overview",
+	description: "Explore the comprehensive plugins documentation. Here you will find all the information needed to understand, install, configure, and use plugins effectively in your projects."
+};
 
-Welcome to the comprehensive plugins documentation. Here you will find all the information needed to understand, install, configure, and use plugins effectively in your projects.
+# {metadata.title}
+
+{metadata.description}
 
 ## What Are Plugins?
 
