--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-erp/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-erp/ru.mdx
@@ -51,29 +51,14 @@ Join the [Medusa.js Chat](https://t.me/medusajs_chat) to connect with developers
 - [ ] Admin UI extension for journaling and audit logs
 - [ ] Detailed documentation
 
+## Getting Started
+
+To learn how to install and configure the 1C:Enterprise integration, check out the [Getting Started](./getting-started) guide.
+
 ## Prerequisites
 
 - Medusa server v2.8.0 or later
 - Node.js v20 or later
-
-## Installation
-
-```bash
-yarn add @gorgo/medusa-1c
-# or
-npm install @gorgo/medusa-1c
-```
-
-## Configuration
-
-Add the provider configuration in your `medusa-config.js` file of the Medusa admin application:
-
-```js
-# ...
-module.exports = defineConfig({
-  # to be done...
-})
-```
 
 ## Development
 
